--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pandas = "^2.1.3"
 matplotlib = "^3.8.1"
 taming-transformers-rom1504 = "^0.0.6"
 ipdb = "^0.13.13"
+pytk = "^0.0.2.1"
 
 
 [build-system]
