--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,29 @@
-[tool.poetry]
-name = "audioldm-train"
+[project]
+name = "audioldm-training-finetuning"
 version = "0.1.0"
-description = ""
-authors = ["haoheliu <867390095@qq.com>"]
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+    "audioldm-eval",
+    "braceexpand==0.1.7",
+    "ftfy==6.1.1",
+    "h5py==3.10.0",
+    "hear21passt",
+    "ipdb==0.13.13",
+    "kornia==0.7.0",
+    "matplotlib==3.8.1",
+    "numpy==1.26.4",
+    "pandas==2.1.3",
+    "pytorch-lightning==2.1.1",
+    "ruamel-yaml==0.18.5",
+    "taming-transformers-rom1504==0.0.6",
+    "transformers==4.30.2",
+    "wandb==0.16.0",
+    "webdataset==0.2.75",
+    "wget==3.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-ruamel-yaml = "^0.18.5"
-wget = "^3.2"
-kornia = "^0.7.0"
-braceexpand = "^0.1.7"
-webdataset = "^0.2.75"
-hear21passt = {git = "https://github.com/haoheliu/passt_hear21.git"}
-audioldm-eval = {git = "https://github.com/haoheliu/audioldm_eval.git"}
-wandb = "^0.16.0"
-pytorch-lightning = "^2.1.1"
-einops = "^0.7.0"
-h5py = "^3.10.0"
-transformers = "4.30.2"
-ftfy = "^6.1.1"
-pandas = "^2.1.3"
-matplotlib = "^3.8.1"
-taming-transformers-rom1504 = "^0.0.6"
-ipdb = "^0.13.13"
-pytk = "^0.0.2.1"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv.sources]
+hear21passt = { git = "https://github.com/haoheliu/passt_hear21.git" }
+audioldm-eval = { git = "https://github.com/YummyVerseVR/audioldm_eval.git" }
