--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "audioldm-eval",
     "braceexpand==0.1.7",
+    "einops==0.7.0",
     "ftfy==6.1.1",
     "h5py==3.10.0",
     "hear21passt",
