--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pytorch-lightning==2.1.1",
     "ruamel-yaml==0.18.5",
     "taming-transformers-rom1504==0.0.6",
+    "torch==2.5",
     "transformers==4.30.2",
     "wandb==0.16.0",
     "webdataset==0.2.75",
