--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pandas==2.1.3",
     "pytorch-lightning==2.1.1",
     "ruamel-yaml==0.18.5",
+    "soundfile>=0.13.1",
     "taming-transformers-rom1504==0.0.6",
     "transformers==4.30.2",
     "wandb==0.16.0",
