Add api deps to uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "audioldm-eval",
     "braceexpand==0.1.7",
     "einops==0.7.0",
+    "fastapi>=0.116.1",
     "ftfy==6.1.1",
     "h5py==3.10.0",
     "hear21passt",
@@ -22,6 +23,7 @@ dependencies = [
     "taming-transformers-rom1504==0.0.6",
     "torch==2.5",
     "transformers==4.30.2",
+    "uvicorn>=0.35.0",
     "wandb==0.16.0",
     "webdataset==0.2.75",
     "wget==3.2",
