--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "matplotlib==3.8.1",
     "numpy==1.26.4",
     "pandas==2.1.3",
+    "python-multipart>=0.0.20",
     "pytorch-lightning==2.1.1",
     "resampy>=0.4.3",
     "ruamel-yaml==0.18.5",
