Update README and restructure project files

--- a/settings/config.json
+++ b/settings/config.json
@@ -4,6 +4,7 @@
     "output": "./output",
     "expire": 300,
     "endpoints": {
-        "control": "http://192.168.11.129:8000"
+        "control": "http://192.168.11.129:8000",
+        "logging": "http://192.168.11.129:9000"
     }
 }
