--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "audioldm-training-finetuning"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "audioldm-eval",
     "braceexpand==0.1.7",
@@ -17,6 +17,7 @@ dependencies = [
     "matplotlib==3.8.1",
     "numpy==1.26.4",
     "pandas==2.1.3",
+    "pylognet",
     "python-multipart>=0.0.20",
     "pytorch-lightning==2.1.1",
     "resampy>=0.4.3",
@@ -34,3 +35,4 @@ dependencies = [
 [tool.uv.sources]
 hear21passt = { git = "https://github.com/haoheliu/passt_hear21.git" }
 audioldm-eval = { git = "https://github.com/YummyVerseVR/audioldm_eval.git" }
+pylognet = { git = "https://github.com/upiscium/pylognet" }
