--- a/settings/config.json
+++ b/settings/config.json
@@ -5,6 +5,6 @@
     "expire": 300,
     "endpoints": {
         "control": "http://192.168.11.129:8000",
-        "logging": "http://192.168.11.129:9000"
+        "logger": "http://192.168.11.129:9000"
     }
 }
