--- a/settings/config.json
+++ b/settings/config.json
@@ -6,5 +6,10 @@
     "endpoints": {
         "control": "http://10.0.1.11:8000",
         "logger": "http://10.0.1.11:9000"
+    },
+    "system": {
+        "enable_logging": false,
+        "debug_mode": false,
+        "port": 8001
     }
 }
